--- a/templates/mavan/index.html
+++ b/templates/mavan/index.html
@@ -113,7 +113,7 @@
 
 <footer id="contact" class="footer">
     <div class="container">
-        <H1>info@mavan.be</H1>
+        <H1>mavanmaakt@gmail.com</H1>
     </div>
 </footer>
 
