--- a/templates/mavan/index.html
+++ b/templates/mavan/index.html
@@ -42,10 +42,10 @@
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#"> <i class="fab fa-facebook-f fa-lg"></i> </a>
+                <a class="nav-link" href="https://www.facebook.com/mavanmaakt/"> <i class="fab fa-facebook-f fa-lg"></i></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fab fa-instagram fa-lg"></i></a>
+                <a class="nav-link" href="https://www.instagram.com/mavanmaakt/"><i class="fab fa-instagram fa-lg"></i></a>
             </li>
         </ul>
     </div>
