--- a/templates/mavan/index.html
+++ b/templates/mavan/index.html
@@ -20,6 +20,11 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <script src="{% static 'mavan/script.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'mavan/style.css' %}"/>
+    <meta name="description"
+          content="Custom interieur design Leuven">
+    <meta name="keywords"
+          content="Leuven, lampen, lamp, licht, tafel, ontwerp , design, hout, custom, mavan, matti, ijzer, metaal, staal, mooi, uniek">
+    <meta charset="UTF-8">
 </head>
 <body>
 <nav id="mavan-nav" class="navbar navbar-expand-md fixed-top">
